# sudoku

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: db.py  dependencies.py  main.py  pyproject.toml  settings.py  sudoku_generator.py
backend/routers/: __init__.py  auth.py  games.py  puzzles.py  websocket_routes.py
backend/schemas/: __init__.py  game.py  puzzle.py  response.py
backend/services/: puzzle_generator.py  sudoku_generator.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: ControlPanel.css  ControlPanel.js  Footer.css  Footer.js  GameList.css  GameList.js  Header.css  Header.js  Home.css  Home.js  Login.css  Login.js  MainLayout.css  MainLayout.js  PuzzleList.css  PuzzleList.js  PuzzleSolver.css  PuzzleSolver.js  Register.css  Register.js  SudokuGrid.css  SudokuGrid.js
