[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "pydantic>=2.12.3",
    "uvicorn[standard]>=0.38.0",
    "random-word",
    "pyjwt>=2.6.0",
    "sqlalchemy>=1.4",
    "aiosqlite>=0.17.0",
    "greenlet",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-decouple",
    "pydantic-settings>=2.11.0",
    "fastapi-pagination>=0.15.0",
]
